[package]
name = "ido"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std", features = ["staking"] }
schemars = "0.7"
secret-toolkit-snip721 = "0.3.0"
secret-toolkit-snip20 = "0.3.0"
secret-toolkit-storage = "0.5.0"
secret-toolkit-utils = "0.3.1"
serde = "1.0.143"

[dev-dependencies]
rand = "0.8.5"
tier = { path = "../tier" }
cosmwasm-schema = "0.10.1"
