[package]
name = "tier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std", features = ["staking"]}
cosmwasm-storage = {version = "0.10.0", package = "secret-cosmwasm-storage"}
secret-toolkit-snip20 = "0.3.0"
schemars = "0.7"
serde = "1.0.143"

[dev-dependencies]
cosmwasm-schema = "1.0"
